# terio

./: .gitignore  Cargo.toml  LICENSE  README.md  architecture.md  demo.md  roadmap.md  use-cases.md
.github/workflows/: ci.yml
docs/: agent-protocol.md  behavior-log.md  current-status.md  migration-to-window-model.md  mvp.md  registry-security.md  release-process.md  script-cache.md  todo.md  trust-model.md
docs/schemas/: agent-output.schema.json  behavior-log.schema.json  script-cache.schema.json
docs/superpowers/plans/: 2026-06-24-phase-4-hardening-and-provider-upgrade.md  2026-06-24-phase-4-trust-and-safety.md  2026-06-24-phase-5-undo-redo.md  2026-06-24-phase-6-workspace.md
docs/superpowers/specs/: 2026-06-24-phase-5-undo-redo-design.md  2026-06-24-phase-6-workspace-design.md
examples/blocks/: track-table.example.json
examples/logs/: behavior-log.example.jsonl
examples/recipes/: split_flac_cue.yaml
examples/scripts/: cache-example.json
scripts/: package.sh  update.sh
src/: accounting.rs  agent.rs  ask.rs  cache.rs  cli.rs  config.rs  identity.rs  integration.rs  lib.rs  main.rs  matcher.rs  proactive.rs  provider.rs  redact.rs  registry.rs  run.rs  script_engine.rs  synonym.rs  trust.rs  types.rs  undo.rs  window.rs
src/log/: mod.rs  reader.rs  writer.rs
src/render/: mod.rs  plain.rs  table.rs
src/ui/: app.rs  mod.rs  renderer.rs  state.rs
