[package]
name = "terio"
version = "0.1.0"
edition = "2021"
description = "Интерфейс-агрегатор с AI-планированием и кешированием скриптов"
license = "MIT"
repository = "https://github.com/bortoq/terio"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Identifiers
uuid = { version = "1", features = ["v4", "serde"] }
ulid = { version = "1", features = ["serde"] }

# Async
tokio = { version = "1", features = ["full"] }

# Error handling
anyhow = "1"
thiserror = "2"

# UI (Dioxus webview) — опционально, требует GTK3/webkit2gtk на Linux
dioxus = { version = "0.6", features = ["desktop"], optional = true }

# Hashing
sha2 = "0.10"

[features]
default = ["desktop"]
desktop = ["dioxus"]

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 2
