[package]
name = "terio"
version = "0.1.0"
edition = "2021"
description = "Интегратор интерфейсов: терминал с LLM, кешем скриптов и песочницей"
license = "Apache-2.0"
repository = "https://github.com/bortoq/terio"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Identifiers
uuid = { version = "1", features = ["v4", "serde"] }
ulid = { version = "1", features = ["serde"] }

# Async
tokio = { version = "1", features = ["full"] }

# Error handling
anyhow = "1"
thiserror = "2"

# UI (Dioxus webview) — опционально, требует GTK3/webkit2gtk на Linux
dioxus = { version = "0.6", features = ["desktop"], optional = true }

# HTTP client (for LLM providers)
ureq = { version = "3", features = ["json"] }

# Hashing
sha2 = "0.10"

# Redaction (regex-based)
regex = "1"

# Hex encoding (for SHA-256)
hex = "0.4"
rhai = { version = "1.25.1", features = ["sync"] }
toml = "1.1.2"

[features]
default = ["desktop"]
desktop = ["dioxus"]

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 2
